packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/catchers.stderr
error: expected `,`
 --> $DIR/catchers.rs:6:25
  |
6 |     let _ = catchers![a b]; //~ ERROR expected
  |                         ^

error: expected identifier
 --> $DIR/catchers.rs:8:26
  |
8 |     let _ = catchers![a::, ]; //~ ERROR expected identifier
  |                          ^

error: unexpected end of input, expected identifier
 --> $DIR/catchers.rs:9:13
  |
9 |     let _ = catchers![a::]; //~ ERROR expected identifier
  |             ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `catchers` (in Nightly builds, run with -Z macro-backtrace for more info)
